--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v4
-        fetch-depth: 1
+        with:
+          fetch-depth: 1
 
       - name: Fetch latest tag
         run: |
@@ -32,7 +33,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        fetch-depth: 1
+        with:
+          fetch-depth: 1
 
       - name: Fetch latest tag
         run: |
