--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build and push the image
         run : |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io \
+          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io \
             -u ${{ github.actor }} \
             --password-stdin
           docker build . --tag ghcr.io/${{ github.actor }}/pokemmoraids:$LATEST_TAG
@@ -54,7 +54,7 @@ jobs:
   
       - name: Login to GHCR
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io \
+          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io \
             -u ${{ github.actor }} \
             --password-stdin
   
