--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,14 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  packages: write
-
+env:
+  IMAGE_NAME: pokemmoraids
+  
 jobs:
   build_and_publish:
+    permissions:
+      packages: write
+      contents: read
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v4
@@ -27,11 +29,10 @@ jobs:
 
       - name: Build and push the image
         run : |
-          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io \
-            -u ${{ github.actor }} \
-            --password-stdin
-          docker build . --tag ghcr.io/${{ github.actor }}/pokemmoraids:$LATEST_TAG
-          docker push ghcr.io/${{ github.actor }}/pokemmoraids:$LATEST_TAG
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker build . --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
+          docker push ghcr.io/${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
+          
 
   deploy:
     runs-on: self-hosted
@@ -54,13 +55,11 @@ jobs:
   
       - name: Login to GHCR
         run: |
-          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io \
-            -u ${{ github.actor }} \
-            --password-stdin
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
   
       - name: Pull image
         run: |
-          sudo docker pull ghcr.io/${{ github.actor }}/pokemmoraids:$LATEST_TAG
+          sudo docker pull ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
   
       - name: Stop existing container
         run: |
@@ -76,4 +75,4 @@ jobs:
             -p 80:8080 \
             -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
             --restart unless-stopped \
-            ghcr.io/${{ github.actor }}/pokemmoraids:$LATEST_TAG
+            ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
