--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build and push the image
         run : |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           docker build . --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
           docker push ghcr.io/${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
           
@@ -55,7 +55,7 @@ jobs:
   
       - name: Login to GHCR
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
   
       - name: Pull image
         run: |
