--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,22 +55,29 @@ jobs:
   
       - name: Login to GHCR
         run: |
-          echo "${{ secrets.GHCR_PAT }}" | sudo docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
   
       - name: Pull image
         run: |
-          sudo docker pull ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
-  
+          docker pull ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
+          
       - name: Stop existing container
         run: |
-          if sudo docker ps -q -f name=raids; then
-            sudo docker stop raids
-            sudo docker rm raids
+          if docker ps -a --format '{{.Names}}' | grep -wq raids; then
+            echo "Existing container found: raids"
+            if docker ps --format '{{.Names}}' | grep -wq raids; then
+              echo "Container is running. Stopping..."
+              docker stop raids
+            fi
+            echo "Removing container..."
+            docker rm raids
+          else
+            echo "No existing container found. Continuing..."
           fi
   
       - name: Run container
         run: |
-          sudo docker run -d \
+          docker run -d \
             --name raids \
             -p 80:8080 \
             -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
