--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,10 +86,10 @@ jobs:
           docker run -d \
             --name raids \
             -p 80:8080 \
-            -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
-            -e SMTP_HOST=${{ vars.SMTP_HOST }} \
-            -e SMTP_USER=${{ vars.SMTP_USER }} \
-            -e SMTP_PORT=${{ vars.SMTP_PORT }} \
-            -e SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }} \
-            -e SMTP_FROM=${{ vars.SMTP_FROM }} \
+            -e "ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}" \
+            -e "SMTP_HOST=${{ vars.SMTP_HOST }}" \
+            -e "SMTP_USER=${{ vars.SMTP_USER }}" \
+            -e "SMTP_PORT=${{ vars.SMTP_PORT }}" \
+            -e "SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }}" \
+            -e "SMTP_FROM=${{ vars.SMTP_FROM }}" \
             ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
