feat: implement side bar for displaying legend

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@
 ADMIN_PASSWORD=your-secure-admin-password
 ADMIN_SECRET=your-jwt-secret-key
 
+# MongoDB Configuration
+MONGO_INITDB_USERNAME=your-mongo-username
+MONGO_INITDB_PASSWORD=your-secure-mongo-password
+MONGO_DB
 # SMTP Configuration for password reset emails
 
 # Option 1: Python debugging SMTP server (for local development/testing)
