fix: buffer wait before restarting

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,4 +72,4 @@ jobs:
       - name: Run containers
         run: |
           docker compose -f docker-compose.yml down || true
-          docker compose -f docker-compose.yml up -d
+          sleep 5; docker compose -f docker-compose.yml up -d
