fix: docker image multi-platform support error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build and push the image
         run : |
           echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker buildx build . --platform linux/amd64,linux/arm64 \
+          docker buildx build . --platform linux/arm64 \
             --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
             
           docker push ghcr.io/${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
