--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,28 @@ jobs:
           git checkout "$latest_tag"
           echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
 
-      - name: Build and push the image
-        run : |
-          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker buildx build . --platform linux/arm64 \
-            --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
+
+      # - name: Build and push the image
+      #   run : |
+      #     echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      #     docker buildx build . --platform linux/arm64 \
+      #       --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
             
-          docker push ghcr.io/${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
+      #     docker push ghcr.io/${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
           
 
   deploy:
@@ -68,9 +83,15 @@ jobs:
         run: |
           echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
   
-      - name: Pull image
-        run: |
-          docker pull ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
+      # - name: Pull image
+      #   run: |
+      #     docker pull ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
         
       - name: Run containers
         run: |
