--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
           git checkout "$latest_tag"
           echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
 
+      - name: Login to GHCR
+        run: |
+          echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -41,6 +45,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.LATEST_TAG }}
+          
 
       # - name: Build and push the image
       #   run : |
