fix: checklist edit mode wasn't loading even after authentication

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,15 @@
 
 # Admin authentication
 ADMIN_PASSWORD=your-secure-admin-password
+
+# # Option 1: Using openssl (recommended)
+# openssl rand -base64 32
+
+# # Option 2: Using /dev/urandom
+# cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1
+
+# # Option 3: Using Python
+# python3 -c "import secrets; print(secrets.token_urlsafe(32))"
 ADMIN_SECRET=your-jwt-secret-key
 
 # MongoDB Configuration
