--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 *.dylib
 *.bak
 
+# Secret files
+*.key
+*.pem
+*.cert
+*.env
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -26,8 +32,7 @@ profile.cov
 go.work
 go.work.sum
 
-# env file
-.env
+# PokeMMO Raids specific ignores
 pokemmo*
 .vscode/
 # Editor/IDE
