--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,16 +46,6 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.LATEST_TAG }}
           
-
-      # - name: Build and push the image
-      #   run : |
-      #     echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      #     docker buildx build . --platform linux/arm64 \
-      #       --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
-            
-      #     docker push ghcr.io/${{ github.repository_owner}}/$IMAGE_NAME:$LATEST_TAG
-          
-
   deploy:
     runs-on: self-hosted
     needs: [build_and_publish]
@@ -88,17 +78,15 @@ jobs:
       - name: Login to GHCR
         run: |
           echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-  
-      # - name: Build and push
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     platforms: linux/amd64,linux/arm64
-      #     pull: true
-      #     tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.LATEST_TAG }}
-      # - name: Pull image
-      #   run: |
-      #     docker pull ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$LATEST_TAG
-        
+
+      
+      - name: Write Cloudflare certs
+        run: |
+          mkdir -p nginx/certs
+          echo "${{ secrets.SSL_ORIGIN_CERT }}" | base64 -d > nginx/certs/origin.pem
+          echo "${{ secrets.SSL_ORIGIN_KEY }}" | base64 -d > nginx/certs/origin.key
+          chmod 600 nginx/certs/origin.*
+
       - name: Run containers
         run: |
           docker compose -f docker-compose.yml down || true
