update: env template

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ ADMIN_PASSWORD=your-secure-admin-password
 # python3 -c "import secrets; print(secrets.token_urlsafe(32))"
 ADMIN_SECRET=your-jwt-secret-key
 
+# SSL Configuration (optional, for HTTPS)
+SSL_ORIGIN_CERT="--BEGIN CERTIFICATE--"
+SSL_PRIVATE_KEY="--BEGIN PRIVATE KEY--"
+
 # MongoDB Configuration
 MONGO_INITDB_USERNAME=your-mongo-username
 MONGO_INITDB_PASSWORD=your-secure-mongo-password
