update: implement caching rules for the site

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,81 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
-  server {
-    listen 443 ssl;
-    server_name pokemmoraids.xyz;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    ssl_certificate     /etc/nginx/certs/origin.pem;
-    ssl_certificate_key /etc/nginx/certs/origin.key;
+    # Gzip compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss;
+    gzip_min_length 1024;
+    gzip_comp_level 6;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
+    server {
+        listen 443 ssl http2;
+        server_name pokemmoraids.xyz;
 
-    location / {
-      proxy_pass http://raidbook:8080;
-      proxy_set_header Host $host;
-      proxy_set_header X-Forwarded-Proto https;
-      proxy_set_header X-Real-IP $remote_addr;
+        ssl_certificate     /etc/nginx/certs/origin.pem;
+        ssl_certificate_key /etc/nginx/certs/origin.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        # Root location - no cache for HTML
+        location / {
+            proxy_pass http://raidbook:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            # Don't cache HTML pages
+            expires -1;
+            add_header Cache-Control "public, no-cache, no-store, must-revalidate";
+        }
+
+        # Static assets (CSS, JS, images) with version query string - Cache for 1 year
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            proxy_pass http://raidbook:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+
+            expires 365d;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            add_header Vary "Accept-Encoding";
+        }
+
+        # Read-only API data (cacheable for 5 minutes)
+        location ~ ^/api/(pokemon-data|pokemon-info|boss-edit-data)$ {
+            proxy_pass http://raidbook:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            expires 5m;
+            add_header Cache-Control "public, max-age=300";
+        }
+
+        # User-specific & Dynamic APIs (no cache)
+        location ~ ^/api/(checklist|user|admin|auth)/ {
+            proxy_pass http://raidbook:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            expires -1;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0, private";
+        }
+
+        # Admin pages (no cache)
+        location ~ ^/(admin|auth)/ {
+            proxy_pass http://raidbook:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            expires -1;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0, private";
+        }
     }
-  }
 }
