fix: devel environment with docker compose

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,3 +4,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+  
+  nginx:
+    profiles:
+      - donotstart
