update: add new location route for caching

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,6 +45,17 @@ http {
             add_header Vary "Accept-Encoding";
         }
 
+        # Data files (JSON) - Cache for 1 hour (in case of data updates)
+        location /data/ {
+            proxy_pass http://raidbook:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+            add_header Vary "Accept-Encoding";
+        }
+
         # Read-only API data (cacheable for 5 minutes)
         location ~ ^/api/(pokemon-data|pokemon-info|boss-edit-data)$ {
             proxy_pass http://raidbook:8080;
