--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,8 @@ http {
     gzip_comp_level 6;
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name pokemmoraids.xyz;
 
         ssl_certificate     /etc/nginx/certs/origin.pem;
